<resources>
    <string name="app_name">PrayerTimerWidget</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_sobh">Sobh (fajr)</string>
    <string name="title_dohr">Dohr</string>
    <string name="title_asr">Asr</string>
    <string name="title_maghreb">Maghreb</string>
    <string name="title_icha">Icha</string>
    <string name="time_sobh">00:00</string>
    <string name="time_dohr">00:00</string>
    <string name="time_asr">00:00</string>
    <string name="time_maghreb">00:00</string>
    <string name="time_icha">00:00</string>
</resources>
