<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow android:id="@+id/sobh">

        <TextView
            android:id="@+id/time_sobh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:text="@string/time_sobh" />

    </TableRow>

    <TableRow android:id="@+id/dohr">

        <TextView
            android:id="@+id/time_dohr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:text="@string/time_dohr" />

    </TableRow>

        <TableRow
            android:id="@+id/asr">

            <TextView
                android:id="@+id/time_asr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawableTop="@drawable/ic_home_black_24dp"
                android:text="@string/time_asr" />

        </TableRow>

        <TableRow
            android:id="@+id/maghreb">

            <TextView
                android:id="@+id/time_maghreb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawableTop="@drawable/ic_home_black_24dp"
                android:text="@string/time_maghreb" />

        </TableRow>

        <TableRow
            android:id="@+id/icha">

            <TextView
                android:id="@+id/time_icha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawableTop="@drawable/ic_home_black_24dp"
                android:text="@string/time_icha" />

        </TableRow>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</GridLayout>